deploy/openshift/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devfile-registry
  labels:
    app: devfile-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devfile-registry
  template:
    metadata:
      labels:
        app: devfile-registry
    spec:
      volumes:
      - name: devfile-registry-storage
        persistentVolumeClaim:
          claimName: devfile-registry-storage
      containers:
      - name: devfile-registry-metadata
        image: docker.io/johncollier/oci-devfile-registry-metadata:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /devfiles/index.json
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /devfiles/index.json
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3

      - name: devfile-registry
        image: registry:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/var/lib/registry"
          name: devfile-registry-storage
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: devfile-registry
  labels:
    app: devfile-registry
spec:
  ports:
    - port: 8080
      name: devfile-registry-metadata
    - port: 5000
      name: devfile-registry
  selector:
    app: devfile-registry
